<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivGallery"
        android:layout_width="wrap_content"
        android:layout_height="324dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:maxHeight="42dp"
        android:maxWidth="42dp"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/latTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/longTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="3dp"
        android:text="LAT:"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnSnap"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="45dp"
        android:background="#F44336"
        android:onClick="takePicture"
        android:text="SNAP" />

    <Button
        android:id="@+id/btnCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnNext"
        android:layout_alignEnd="@+id/btnNext"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="130dp"
        android:text="Caption" />

    <TextView
        android:id="@+id/captionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="180dp"
        android:text="Caption goes here"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnPrev"
        android:layout_alignTop="@+id/btnShare"
        android:layout_alignEnd="@+id/btnPrev"
        android:layout_alignBottom="@+id/btnShare"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:text="Search" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="45dp"
        android:text="NEXT" />

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="275dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="45dp"
        android:text="PREV" />

    <TextView
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_above="@+id/btnSearch"
        android:layout_alignTop="@+id/captionText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="230dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="5dp"
        android:text="Date"
        android:textAlignment="center"
        android:textSize="13sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnSnap"
        android:layout_alignTop="@+id/btnCaption"
        android:layout_alignEnd="@+id/btnSnap"
        android:layout_alignBottom="@+id/btnCaption"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-3dp"
        android:text="SHARE" />

    <TextView
        android:id="@+id/longTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivGallery"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:text="LON:"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/longView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivGallery"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/longTitle"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/latView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/longTitle"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@+id/longTitle"
        android:textColor="#FFFFFF" />

</RelativeLayout>