...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnDiscord"
        android:layout_width="125dp"
        android:layout_height="52dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#5F5BD8"
        android:fontFamily="sans-serif"
        android:text="DISCORD"
...
